<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">pretix DPC</string>
    <string name="device_admin">pretix DPC</string>
    <string name="device_admin_description">pretix DPC</string>
    <string name="pref_DPC_head">Device Policy Controler (DPC) Settings</string>
    <string name="pref_DPC_is_provisioned">DPC is provisioned</string>
    <string name="pref_DPC_unlock_barcode">Barcode used to unlock device</string>
    <string name="pref_DPC_kiosk_package">Name of package that should run in kiosk mode</string>
    <string name="pref_DPC_kiosk_package_url">Download URL kiosk application</string>
    <string name="setup_not_device_owner">pretixDPC is not the device owner!</string>
    <string name="setup_not_device_owner_expl">In order to function correctly, pretixDPC needs to be the device owner.\nThis can only be done by provisioning the device when there has been no account added to the device yet.\n\nThe most reliable way is to provision the device with the help an NFC-tag or by bumping it to another NFC-enabled phone.\n\nIf no NFC-tag or device is at hand, the same can be achieved by executing the following command through adb:\nadb shell dpm set-device-owner de.pccoholic.pretix.dpc/.AdminReceiver</string>
    <string name="setup_not_device_admin">pretixDPC is not the device administrator!</string>
    <string name="setup_not_device_admin_expl">In order to function correctly, pretixDPC needs to be the device administrator.\nNormally, this should have automatically been done during provisioning of pretixDPC as a device owner. However it can also be done manually by accessing the System Settings and finding the \"Device Adminstrators\"-settings in the Security-tab.</string>
    <string name="setup_not_provisioned">pretixDPC is not provisioned!</string>
    <string name="setup_not_provisioned_expl">This device has not been provisioned yet or the saved settings have been corrupted. Please scan a provisioning barcode now.</string>
    <string name="setup_no_kioskapp">Kiosk application missing!</string>
    <string name="setup_no_kioskapp_expl">The application that pretixDPC is supposed to guard is not installed yet.\n\nPress the button below to install the application.</string>
    <string name="setup_no_kioskapp_button">Install now</string>
    <string name="setup_everything_fine">Everything is fine!</string>
    <string name="setup_everything_fine_expl">Why you are seeing this screen is thus beyond our understanding.\n\nPerhaps try restarting the app and/or device and see if the problem persists.</string>
    <string name="setup_everything_fine_button">Exit the application</string>
</resources>