<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_DPC_head">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_DPC_is_provisioned"
            android:title="@string/pref_DPC_is_provisioned" />
        <EditTextPreference
            android:key="pref_DPC_unlock_barcode"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_DPC_unlock_barcode" />
        <EditTextPreference
            android:key="pref_DPC_kiosk_package"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_DPC_kiosk_package" />
        <EditTextPreference
            android:key="pref_DPC_kiosk_package_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_DPC_kiosk_package_url" />
    </PreferenceCategory>
</PreferenceScreen>